# backend/internal/dto/lookup_dto.go
@@ -1,0 +1,6 @@
+package dto
+
+type LookupOption struct {
+	Label string      `json:"label"`
+	Value interface{} `json:"value"`
+}
